--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"serialization/serialization": "3.*"
+		"serialization/serialization": "3.*",
+		"wikibase/data-model": "~1.1"
 	},
 	"autoload": {
 		"psr-4": {
