--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"wikidataquery"
 	],
 	"homepage": "https://github.com/ProjetPP/WikidataQueryApi",
-	"license": "MIT",
+	"license": "GPLv2+",
 	"authors": [
 		{
 			"name": "Thomas Pellissier Tanon",
@@ -17,7 +17,8 @@
 	"require": {
 		"php": ">=5.3.0",
 		"serialization/serialization": "3.*",
-		"wikibase/data-model": "~1.1"
+		"wikibase/data-model": "~1.1",
+		"guzzle/http": "~3.7"
 	},
 	"autoload": {
 		"psr-4": {
