--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"serialization/serialization": "3.*",
-		"wikibase/data-model": "~1.1",
+		"wikibase/data-model": ">0.8",
 		"guzzle/http": "~3.7"
 	},
 	"autoload": {
