--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 		"php": ">=5.3.0",
 		"serialization/serialization": "3.*",
 		"wikibase/data-model": ">0.8",
+		"data-values/geo": "~1.0",
 		"guzzle/http": "~3.7"
 	},
 	"autoload": {
