--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"serialization/serialization": "3.*",
 		"wikibase/data-model": ">0.8",
 		"data-values/geo": "~1.0",
+		"data-values/time": "~0.6",
 		"guzzle/http": "~3.7"
 	},
 	"autoload": {
