--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"php": ">=5.3.0",
 		"serialization/serialization": "3.*",
 		"wikibase/data-model": ">0.8",
-		"data-values/geo": "~1.0",
+		"data-values/geo": ">0.1",
 		"data-values/time": "~0.6",
 		"guzzle/http": "~3.7"
 	},
