--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
 	"require": {
 		"php": ">=5.3.0",
 		"serialization/serialization": "3.*",
-		"wikibase/data-model": ">0.8",
-		"data-values/geo": ">0.1",
+		"wikibase/data-model": "~2.0|~1.0|~0.8",
+		"data-values/geo": "~1.0|~0.1",
 		"data-values/time": "~0.6",
 		"data-values/number": "~0.4",
 		"guzzle/http": "~3.7"
