--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"require": {
 		"php": ">=5.3.0",
 		"serialization/serialization": "3.*",
-		"wikibase/data-model": "~2.0|~1.0|~0.8",
+		"wikibase/data-model": "~4.0|~3.0|~2.0|~1.0|~0.8",
 		"data-values/geo": "~1.0|~0.1",
 		"data-values/time": "~0.6",
 		"data-values/number": "~0.4",
