--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
 	"require": {
 		"php": ">=5.5.0",
 		"serialization/serialization": "~3.0",
-		"wikibase/data-model": "~4.0|~3.0|~2.0|~1.0|~0.8",
-		"data-values/geo": "~1.0|~0.1",
-		"data-values/time": "~0.6",
-		"data-values/number": "~0.4",
+		"wikibase/data-model": "~6.0|~5.0|~4.0",
+		"data-values/geo": "~1.0",
+		"data-values/time": "~0.8",
+		"data-values/number": "~0.6",
 		"guzzlehttp/guzzle": "~6.1"
 	},
 	"autoload": {
